--- a/Dockerfile.mysql-5.6
+++ b/Dockerfile.mysql-5.6
@@ -2,14 +2,16 @@ FROM ruby:2.5.1-slim
 
 WORKDIR /usr/src/app
 
-COPY fs/ /
+COPY Gemfile Gemfile.lock /usr/src/app/
 
 RUN apt-get update && \
     apt-get install -y build-essential cron && \
-    apt-get install -y mysql-client-5.5 && \
+    apt-get install -y mysql-client-5.6 && \
     bundle install && \
     apt-get remove -y build-essential && \
     apt-get autoremove -y && \
     rm -rf /var/lib/apt/lists/*
+
+COPY fs/ /
 
 ENTRYPOINT [ "/usr/local/bin/entrypoint.sh" ]
