--- a/Dockerfile.postgresql-9.6
+++ b/Dockerfile.postgresql-9.6
@@ -2,7 +2,7 @@ FROM ruby:2.5.1-slim
 
 WORKDIR /usr/src/app
 
-COPY fs/ /
+COPY Gemfile Gemfile.lock /usr/src/app/
 
 RUN apt-get update && \
     apt-get install -y build-essential cron && \
@@ -16,5 +16,7 @@ RUN apt-get update && \
     apt-get remove -y build-essential && \
     apt-get autoremove -y && \
     rm -rf /var/lib/apt/lists/*
+
+COPY fs/ /
 
 ENTRYPOINT [ "/usr/local/bin/entrypoint.sh" ]
