--- a/Dockerfile.mysql-5.6
+++ b/Dockerfile.mysql-5.6
@@ -6,7 +6,10 @@ COPY Gemfile Gemfile.lock /usr/src/app/
 
 RUN apt-get update && \
     apt-get install -y build-essential cron && \
-    apt-get install -y mysql-client-5.6 && \
+    apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 --recv 8C718D3B5072E1F5 && \
+    echo "deb http://repo.mysql.com/apt/debian/ stretch mysql-5.6" | tee /etc/apt/sources.list.d/mysql-5.6.list && \
+    apt-get update && \
+    apt-get install -y mysql-community-client && \
     bundle install && \
     apt-get remove -y build-essential && \
     apt-get autoremove -y && \
