--- a/templates/Dockerfile.footer
+++ b/templates/Dockerfile.footer
@@ -1,3 +1,4 @@
+    gem install bundler -v "~> 2.0" && \
     bundle install && \
     apt-get remove -y build-essential && \
     apt-get autoremove -y && \
