Use SIGKILL to kill cron

--- a/templates/Dockerfile.footer
+++ b/templates/Dockerfile.footer
@@ -9,4 +9,6 @@ COPY fs/ /
 ENV BACKUP_DATA_PATH="/var/lib/backups" \
     BACKUP_TMP_PATH="/tmp/backup"
 
+STOPSIGNAL SIGKILL
+
 ENTRYPOINT [ "/usr/local/bin/entrypoint.sh" ]
