--- a/Dockerfile.postgresql-11
+++ b/Dockerfile.postgresql-11
@@ -1,4 +1,4 @@
-FROM ruby:2.5.5-slim
+FROM ruby:2.5.8-slim
 
 WORKDIR /usr/src/app
 
@@ -12,6 +12,7 @@ RUN apt-get update && \
     apt-get update && \
     apt-get install -y postgresql-client-11 && \
     apt-get remove -y wget && \
+    gem install bundler -v "~> 2.0" && \
     bundle install && \
     apt-get remove -y build-essential && \
     apt-get autoremove -y && \
@@ -21,5 +22,7 @@ COPY fs/ /
 
 ENV BACKUP_DATA_PATH="/var/lib/backups" \
     BACKUP_TMP_PATH="/tmp/backup"
+
+STOPSIGNAL SIGKILL
 
 ENTRYPOINT [ "/usr/local/bin/entrypoint.sh" ]
