--- a/Dockerfile.redis-3
+++ b/Dockerfile.redis-3
@@ -1,4 +1,4 @@
-FROM ruby:2.5.5-slim
+FROM ruby:2.5.8-slim
 
 WORKDIR /usr/src/app
 
@@ -14,6 +14,7 @@ RUN apt-get update && \
     cp src/redis-cli /usr/local/bin/ && \
     rm -fr redis-3.2.13 redis-3.2.13.tar.gz && \
     apt-get remove -y wget && \
+    gem install bundler -v "~> 2.0" && \
     bundle install && \
     apt-get remove -y build-essential && \
     apt-get autoremove -y && \
@@ -23,5 +24,7 @@ COPY fs/ /
 
 ENV BACKUP_DATA_PATH="/var/lib/backups" \
     BACKUP_TMP_PATH="/tmp/backup"
+
+STOPSIGNAL SIGKILL
 
 ENTRYPOINT [ "/usr/local/bin/entrypoint.sh" ]
