--- a/Dockerfile.redis-5
+++ b/Dockerfile.redis-5
@@ -1,4 +1,4 @@
-FROM ruby:2.5.5-slim
+FROM ruby:2.5.8-slim
 
 WORKDIR /usr/src/app
 
@@ -7,13 +7,14 @@ COPY Gemfile Gemfile.lock /usr/src/app/
 RUN apt-get update && \
     apt-get install -y build-essential cron && \
     apt-get install -y wget && \
-    wget http://download.redis.io/releases/redis-5.0.4.tar.gz && \
-    tar -xzf redis-5.0.4.tar.gz && \
-    cd redis-5.0.4 && \
+    wget http://download.redis.io/releases/redis-5.0.9.tar.gz && \
+    tar -xzf redis-5.0.9.tar.gz && \
+    cd redis-5.0.9 && \
     make redis-cli && \
     cp src/redis-cli /usr/local/bin/ && \
-    rm -fr redis-5.0.4 redis-5.0.4.tar.gz && \
+    rm -fr redis-5.0.9 redis-5.0.9.tar.gz && \
     apt-get remove -y wget && \
+    gem install bundler -v "~> 2.0" && \
     bundle install && \
     apt-get remove -y build-essential && \
     apt-get autoremove -y && \
@@ -23,5 +24,7 @@ COPY fs/ /
 
 ENV BACKUP_DATA_PATH="/var/lib/backups" \
     BACKUP_TMP_PATH="/tmp/backup"
+
+STOPSIGNAL SIGKILL
 
 ENTRYPOINT [ "/usr/local/bin/entrypoint.sh" ]
