--- a/Dockerfile.sqlite-3
+++ b/Dockerfile.sqlite-3
@@ -1,4 +1,4 @@
-FROM ruby:2.5.5-slim
+FROM ruby:2.5.8-slim
 
 WORKDIR /usr/src/app
 
@@ -7,6 +7,7 @@ COPY Gemfile Gemfile.lock /usr/src/app/
 RUN apt-get update && \
     apt-get install -y build-essential cron && \
     apt-get install -y sqlite3 && \
+    gem install bundler -v "~> 2.0" && \
     bundle install && \
     apt-get remove -y build-essential && \
     apt-get autoremove -y && \
@@ -16,5 +17,7 @@ COPY fs/ /
 
 ENV BACKUP_DATA_PATH="/var/lib/backups" \
     BACKUP_TMP_PATH="/tmp/backup"
+
+STOPSIGNAL SIGKILL
 
 ENTRYPOINT [ "/usr/local/bin/entrypoint.sh" ]
