--- a/Dockerfile.mysql-5.7
+++ b/Dockerfile.mysql-5.7
@@ -1,4 +1,4 @@
-FROM ruby:2.5.5-slim
+FROM ruby:2.5.8-slim
 
 WORKDIR /usr/src/app
 
@@ -10,6 +10,7 @@ RUN apt-get update && \
     echo "deb http://repo.mysql.com/apt/debian/ stretch mysql-5.7" | tee /etc/apt/sources.list.d/mysql-5.7.list && \
     apt-get update && \
     apt-get install -y mysql-community-client && \
+    gem install bundler -v "~> 2.0" && \
     bundle install && \
     apt-get remove -y build-essential && \
     apt-get autoremove -y && \
@@ -19,5 +20,7 @@ COPY fs/ /
 
 ENV BACKUP_DATA_PATH="/var/lib/backups" \
     BACKUP_TMP_PATH="/tmp/backup"
+
+STOPSIGNAL SIGKILL
 
 ENTRYPOINT [ "/usr/local/bin/entrypoint.sh" ]
