--- a/Dockerfile.mysql-8.0
+++ b/Dockerfile.mysql-8.0
@@ -6,14 +6,10 @@ COPY Gemfile Gemfile.lock /usr/src/app/
 
 RUN apt-get update && \
     apt-get install -y build-essential cron && \
-    apt-get install -y wget && \
-    wget http://download.redis.io/releases/redis-2.8.24.tar.gz && \
-    tar -xzf redis-2.8.24.tar.gz && \
-    cd redis-2.8.24 && \
-    make redis-cli && \
-    cp src/redis-cli /usr/local/bin/ && \
-    rm -fr redis-2.8.24 redis-2.8.24.tar.gz && \
-    apt-get remove -y wget && \
+    apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 --recv 8C718D3B5072E1F5 && \
+    echo "deb http://repo.mysql.com/apt/debian/ stretch mysql-8.0" | tee /etc/apt/sources.list.d/mysql-8.0.list && \
+    apt-get update && \
+    apt-get install -y mysql-community-client && \
     gem install bundler -v "~> 2.0" && \
     bundle install && \
     apt-get remove -y build-essential && \
