--- a/Dockerfile.mysql-5.6
+++ b/Dockerfile.mysql-5.6
@@ -1,11 +1,11 @@
-FROM ruby:2.5.8-slim-stretch
+FROM ruby:2.7.3-slim-buster
 
 WORKDIR /usr/src/app
 
 COPY Gemfile Gemfile.lock /usr/src/app/
 
 RUN apt-get update && \
-    apt-get install -y build-essential cron && \
+    apt-get install -y build-essential cron libcurl4-openssl-dev libxml2-dev && \
     apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 --recv 8C718D3B5072E1F5 && \
     echo "deb http://repo.mysql.com/apt/debian/ stretch mysql-5.6" | tee /etc/apt/sources.list.d/mysql-5.6.list && \
     apt-get update && \
