--- a/Dockerfile.redis-3
+++ b/Dockerfile.redis-3
@@ -1,11 +1,11 @@
-FROM ruby:2.5.8-slim-stretch
+FROM ruby:2.7.3-slim-buster
 
 WORKDIR /usr/src/app
 
 COPY Gemfile Gemfile.lock /usr/src/app/
 
 RUN apt-get update && \
-    apt-get install -y build-essential cron && \
+    apt-get install -y build-essential cron libcurl4-openssl-dev libxml2-dev && \
     apt-get install -y wget && \
     wget http://download.redis.io/releases/redis-3.2.13.tar.gz && \
     tar -xzf redis-3.2.13.tar.gz && \
