--- a/Dockerfile.mysql-5.6
+++ b/Dockerfile.mysql-5.6
@@ -1,4 +1,4 @@
-FROM ruby:2.7.3-slim-buster
+FROM ruby:2.6.7-slim-stretch
 
 WORKDIR /usr/src/app
 
@@ -10,6 +10,7 @@ RUN apt-get update && \
     echo "deb http://repo.mysql.com/apt/debian/ stretch mysql-5.6" | tee /etc/apt/sources.list.d/mysql-5.6.list && \
     apt-get update && \
     apt-get install -y mysql-community-client && \
+    mysql --version && \
     gem install bundler -v "~> 2.0" && \
     bundle install && \
     apt-get remove -y build-essential && \
