--- a/Dockerfile.mysql-8.0
+++ b/Dockerfile.mysql-8.0
@@ -7,9 +7,10 @@ COPY Gemfile Gemfile.lock /usr/src/app/
 RUN apt-get update && \
     apt-get install -y build-essential cron libcurl4-openssl-dev libxml2-dev && \
     apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 --recv 8C718D3B5072E1F5 && \
-    echo "deb http://repo.mysql.com/apt/debian/ stretch mysql-8.0" | tee /etc/apt/sources.list.d/mysql-8.0.list && \
+    echo "deb http://repo.mysql.com/apt/debian/ buster mysql-8.0" | tee /etc/apt/sources.list.d/mysql-8.0.list && \
     apt-get update && \
     apt-get install -y mysql-community-client && \
+    mysql --version && \
     gem install bundler -v "~> 2.0" && \
     bundle install && \
     apt-get remove -y build-essential && \
