--- a/Dockerfile.redis-2
+++ b/Dockerfile.redis-2
@@ -14,6 +14,7 @@ RUN apt-get update && \
     cp src/redis-cli /usr/local/bin/ && \
     rm -fr redis-2.8.24 redis-2.8.24.tar.gz && \
     apt-get remove -y wget && \
+    redis-cli --version && \
     gem install bundler -v "~> 2.0" && \
     bundle install && \
     apt-get remove -y build-essential && \
