--- a/Dockerfile.redis-6
+++ b/Dockerfile.redis-6
@@ -7,12 +7,14 @@ COPY Gemfile Gemfile.lock /usr/src/app/
 RUN apt-get update && \
     apt-get install -y build-essential cron libcurl4-openssl-dev libxml2-dev && \
     apt-get install -y wget && \
-    echo 'deb http://apt.postgresql.org/pub/repos/apt/ buster-pgdg main' >> /etc/apt/sources.list.d/pgdg.list && \
-    wget --quiet -O - https://www.postgresql.org/media/keys/ACCC4CF8.asc | apt-key add - && \
-    apt-get update && \
-    apt-get install -y postgresql-client-13 && \
+    wget http://download.redis.io/releases/redis-6.2.4.tar.gz && \
+    tar -xzf redis-6.2.4.tar.gz && \
+    cd redis-6.2.4 && \
+    make redis-cli && \
+    cp src/redis-cli /usr/local/bin/ && \
+    rm -fr redis-6.2.4 redis-6.2.4.tar.gz && \
     apt-get remove -y wget && \
-    pg_dump --version && \
+    redis-cli --version && \
     gem install bundler -v "~> 2.0" && \
     bundle install && \
     apt-get remove -y build-essential && \
